[workspace]
members = [
  "binding_core_node",
  "binding_core_wasm",
  "binding_es_ast_viewer",
  "binding_html_node",
  "binding_minifier_node",
  "binding_minifier_wasm",
  "binding_typescript_wasm",
  "binding_react_compiler_node",
  "swc_cli",
]
resolver = "2"

  [workspace.package]
  edition    = "2021"
  license    = "Apache-2.0"
  repository = "https://github.com/swc-project/swc.git"


  [workspace.dependencies]
  anyhow                  = { version = "1.0.98", default-features = false }
  backtrace               = { version = "0.3", default-features = false }
  getrandom               = { version = "0.3.3", default-features = false }
  js-sys                  = { version = "0.3.77", default-features = false }
  lightningcss            = { version = "1.0.0-alpha.66", default-features = false }
  miette                  = { version = "7.6.0", default-features = false }
  napi                    = { version = "3", default-features = false }
  napi-build              = { version = "2", default-features = false }
  napi-derive             = { version = "3", default-features = false }
  owo-colors              = { version = "4.2.1", default-features = false }
  par-core                = { version = "2.0.0", default-features = false }
  path-clean              = { version = "1.0", default-features = false }
  quote                   = { version = "1", default-features = false }
  rustc-hash              = { version = "2", default-features = false }
  serde                   = { version = "1", default-features = false }
  serde-wasm-bindgen      = { version = "0.6.5", default-features = false }
  serde_json              = { version = "1.0.140", default-features = false }
  swc_atoms               = { version = "8.0.1", default-features = false }
  swc_cli_impl            = { version = "46.0.0", default-features = false }
  swc_common              = { version = "16.0.0", default-features = false }
  swc_compiler_base       = { version = "38.0.0", default-features = false }
  swc_config              = { version = "3.1.2", default-features = false }
  swc_core                = { version = "46.0.2", default-features = false }
  swc_css_ast             = { version = "16.0.0", default-features = false }
  swc_css_codegen         = { version = "16.0.0", default-features = false }
  swc_css_minifier        = { version = "16.0.0", default-features = false }
  swc_css_parser          = { version = "16.0.0", default-features = false }
  swc_ecma_react_compiler = { version = "10.0.0", default-features = false }
  swc_error_reporters     = { version = "18.0.0", default-features = false }
  swc_html                = { version = "28.0.0", default-features = false }
  swc_html_ast            = { version = "16.0.0", default-features = false }
  swc_html_minifier       = { version = "35.0.0", default-features = false }
  swc_malloc              = { version = "1.2.4", default-features = false }
  swc_nodejs_common       = { version = "1.0.3", default-features = false }
  swc_sourcemap           = { version = "9.3.4", default-features = false }
  swc_ts_fast_strip       = { version = "35.0.0", default-features = false }
  tracing                 = { version = "0.1.41", default-features = false }
  tracing-chrome          = { version = "0.7.2", default-features = false }
  tracing-futures         = { version = "0.2.5", default-features = false }
  tracing-subscriber      = { version = "0.3.20", default-features = false }
  unicode-width           = { version = "0.2.1", default-features = false }
  wasm-bindgen            = { version = "0.2.100", default-features = false }
  wasm-bindgen-futures    = { version = "0.4.50", default-features = false }

[profile.release]
# lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
lto = "fat"

# debug = true
# opt-level = 'z'

# Strip debug symbols
strip = "symbols"

# Reduce binary size
codegen-units = 1

  [profile.release.package]

    [profile.release.package.wasmer-wasix]
    opt-level = "s"

    [profile.release.package.cranelift-codegen]
    opt-level = "s"

    [profile.release.package.swc_ecma_minifier]
    opt-level = 3

    [profile.release.package.swc]
    opt-level = 3

    [profile.release.package.swc_ecma_compat_es2015]
    opt-level = "s"

    [profile.release.package.swc_ecma_parser]
    opt-level = 3

    [profile.release.package.wast]
    opt-level = "s"

    [profile.release.package.wasmparser]
    opt-level = "s"

    [profile.release.package.browserslist-rs]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_module]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_proposal]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_optimization]
    opt-level = 3

    [profile.release.package.swc_ecma_ast]
    opt-level = 3

    [profile.release.package.swc_ecma_transforms_base]
    opt-level = 3

    [profile.release.package.webc]
    opt-level = "s"

    [profile.release.package.swc_ecma_compat_es2022]
    opt-level = "s"

    [profile.release.package.regex-automata]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_typescript]
    opt-level = 3

    [profile.release.package.clap]
    opt-level = "s"

    [profile.release.package.swc_cli_impl]
    opt-level = "s"

    [profile.release.package.wasmer-config]
    opt-level = "s"

    [profile.release.package.swc_ecma_utils]
    opt-level = 3

    [profile.release.package.wasmer-compiler]
    opt-level = "s"

    [profile.release.package.wasmer]
    opt-level = "s"

    [profile.release.package.wasmer-vm]
    opt-level = "s"

    [profile.release.package.wasmer-compiler-cranelift]
    opt-level = "s"

    [profile.release.package.regalloc2]
    opt-level = "s"

    [profile.release.package.swc_plugin_backend_wasmer]
    opt-level = "s"

    [profile.release.package.swc_plugin_runner]
    opt-level = "s"

    [profile.release.package.globset]
    opt-level = "s"

    [profile.release.package.toml_edit]
    opt-level = "s"

    [profile.release.package.miette]
    opt-level = "s"

    [profile.release.package.swc_bundler]
    opt-level = "s"

    [profile.release.package.swc_ecma_compat_es3]
    opt-level = "s"

    [profile.release.package.serde]
    opt-level = "s"

    [profile.release.package.regex-syntax]
    opt-level = "s"

    [profile.release.package.virtual-fs]
    opt-level = "s"

    [profile.release.package.swc_typescript]
    opt-level = "s"

    [profile.release.package.wasmer-package]
    opt-level = "s"

    [profile.release.package.aho-corasick]
    opt-level = "s"

    [profile.release.package.backtrace]
    opt-level = "s"

    [profile.release.package.tokio]
    opt-level = "s"

    [profile.release.package.napi]
    opt-level = "s"


    [profile.dev.package."*"]
    debug-assertions = false
