[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
# OUT_DIR is required for testing
build = "build.rs"
description = "Very fast ecmascript bundler"
documentation = "https://rustdoc.swc.rs/swc_bundler/"
edition = "2018"
include = ["Cargo.toml", "build.rs", "src/**/*.rs", "src/**/*.js"]
license = "Apache-2.0/MIT"
name = "swc_bundler"
repository = "https://github.com/swc-project/swc.git"
version = "0.32.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
concurrent = ["swc_common/concurrent", "dashmap", "rayon", "indexmap/rayon"]
default = []

[dependencies]
ahash = "0.7"
anyhow = "1"
crc = "1.8"
dashmap = {version = "3", optional = true}
indexmap = "1.6"
is-macro = "0.1"
log = "0.4"
once_cell = "1"
petgraph = "0.5"
radix_fmt = "1"
rayon = {version = "1", optional = true}
relative-path = "1.2"
retain_mut = "0.1.2"
swc_atoms = {version = "0.2.4", path = "../atoms"}
swc_common = {version = "0.10.16", path = "../common"}
swc_ecma_ast = {version = "0.43.1", path = "../ecmascript/ast"}
swc_ecma_codegen = {version = "0.52.2", path = "../ecmascript/codegen"}
swc_ecma_parser = {version = "0.54.2", path = "../ecmascript/parser"}
swc_ecma_transforms = {version = "0.45.2", path = "../ecmascript/transforms", features = ["optimization"]}
swc_ecma_utils = {version = "0.34.1", path = "../ecmascript/utils"}
swc_ecma_visit = {version = "0.29.1", path = "../ecmascript/visit"}

[dev-dependencies]
hex = "0.4"
ntest = "0.7.2"
reqwest = {version = "0.10.8", features = ["blocking"]}
sha-1 = "0.9"
swc_ecma_transforms = {version = "0.45.2", path = "../ecmascript/transforms", features = ["react", "typescript"]}
tempfile = "3.1.0"
testing = {version = "0.10.5", path = "../testing"}
url = "2.1.1"
walkdir = "2"
