[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
# OUT_DIR is required for testing
build = "build.rs"
description = "Very fast ecmascript bundler"
documentation = "https://rustdoc.swc.rs/swc_bundler/"
edition = "2018"
include = ["Cargo.toml", "build.rs", "src/**/*.rs", "src/**/*.js"]
license = "Apache-2.0/MIT"
name = "swc_bundler"
repository = "https://github.com/swc-project/swc.git"
version = "0.44.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
concurrent = ["swc_common/concurrent", "dashmap", "rayon", "indexmap/rayon"]
default = []

[dependencies]
ahash = "0.7"
anyhow = "1"
crc = "1.8"
dashmap = {version = "4.0.2", optional = true}
fxhash = "0.2"
indexmap = "1.6"
is-macro = "0.1"
log = "0.4"
once_cell = "1"
petgraph = "0.5"
radix_fmt = "1"
rayon = {version = "1", optional = true}
relative-path = "1.2"
retain_mut = "0.1.2"
swc_atoms = {version = "0.2.4", path = "../atoms"}
swc_common = {version = "0.10.16", path = "../common"}
swc_ecma_ast = {version = "0.47.0", path = "../ecmascript/ast"}
swc_ecma_codegen = {version = "0.60.0", path = "../ecmascript/codegen"}
swc_ecma_loader = {version = "0.9.0", path = "../ecmascript/loader"}
swc_ecma_parser = {version = "0.61.0", path = "../ecmascript/parser"}
swc_ecma_transforms = {version = "0.57.0", path = "../ecmascript/transforms", features = ["optimization"]}
swc_ecma_utils = {version = "0.38.0", path = "../ecmascript/utils"}
swc_ecma_visit = {version = "0.33.0", path = "../ecmascript/visit"}

[dev-dependencies]
hex = "0.4"
ntest = "0.7.2"
reqwest = {version = "0.10.8", features = ["blocking"]}
sha-1 = "0.9"
swc_ecma_transforms = {version = "0.57.0", path = "../ecmascript/transforms", features = ["react", "typescript"]}
tempfile = "3.1.0"
testing = {version = "0.10.5", path = "../testing"}
url = "2.1.1"
walkdir = "2"
