[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Common utilities for the swc project."
documentation = "https://swc-project.github.io/rustdoc/swc_common/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_common"
repository = "https://github.com/swc-project/swc.git"
version = "0.10.1"

[features]
concurrent = ["parking_lot"]
default = []
tty-emitter = ["atty", "termcolor"]

[dependencies]
ast_node = {version = "0.7", path = "../macros/ast_node"}
atty = {version = "0.2", optional = true}
cfg-if = "0.1.2"
either = "1.5"
from_variant = {version = "0.1", path = "../macros/from_variant"}
fxhash = "0.2.1"
log = "0.4"
once_cell = "1"
owning_ref = "0.4"
parking_lot = {version = "0.7.1", optional = true}
scoped-tls = {version = "1"}
serde = {version = "1", features = ["derive"]}
sourcemap = {version = "6", optional = true}
swc_visit = {version = "0.2.0", path = "../visit"}
termcolor = {version = "1.0", optional = true}
unicode-width = "0.1.4"

[dev-dependencies]
rayon = "1"
serde_json = "1"
