[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "CSS apis for rust"
documentation = "https://rustdoc.swc.rs/swc_css/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_css"
repository = "https://github.com/swc-project/swc.git"
version = "0.1.0"

[dependencies]
swc_css_ast = {path = "./ast", version = "0.1.0"}
swc_css_parser = {path = "./parser", version = "0.1.0"}
