[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "CSS apis for rust"
documentation = "https://rustdoc.swc.rs/swc_css/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_css"
repository = "https://github.com/swc-project/swc.git"
version = "0.28.0"

[dependencies]
swc_css_ast = {version = "0.26.0", path = "./ast"}
swc_css_codegen = {version = "0.26.0", path = "./codegen"}
swc_css_parser = {version = "0.28.0", path = "./parser"}
swc_css_utils = {version = "0.23.0", path = "./utils/"}
swc_css_visit = {version = "0.25.0", path = "./visit"}
