[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Ecmascript"
documentation = "https://rustdoc.swc.rs/swc_ecmascript/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_ecmascript"
repository = "https://github.com/swc-project/swc.git"
version = "0.64.0"

[package.metadata.docs.rs]
all-features = true

[features]
codegen = ["swc_ecma_codegen"]
default = ["typescript-parser"]
dep_graph = ["swc_ecma_dep_graph"]
minifier = ["swc_ecma_minifier"]
parser = ["swc_ecma_parser"]
preset_env = ["swc_ecma_preset_env"]
transforms = ["swc_ecma_transforms"]
utils = ["swc_ecma_utils"]
visit = ["swc_ecma_visit"]

typescript-parser = ["swc_ecma_parser/typescript"]

compat = ["swc_ecma_transforms/compat"]
module = ["swc_ecma_transforms/module"]
optimization = ["swc_ecma_transforms/optimization"]
proposal = ["swc_ecma_transforms/proposal"]
react = ["swc_ecma_transforms/react"]
typescript = ["typescript-parser", "swc_ecma_transforms/typescript"]

[dependencies]
swc_ecma_ast = {version = "0.52.0", path = "./ast"}
swc_ecma_codegen = {version = "0.70.2", path = "./codegen", optional = true}
swc_ecma_dep_graph = {version = "0.39.1", path = "./dep-graph", optional = true}
swc_ecma_minifier = {version = "0.28.0", path = "./minifier", optional = true}
swc_ecma_parser = {version = "0.70.2", path = "./parser", optional = true, default-features = false}
swc_ecma_preset_env = {version = "0.43.0", path = "./preset-env", optional = true}
swc_ecma_transforms = {version = "0.72.0", path = "./transforms", optional = true}
swc_ecma_utils = {version = "0.44.2", path = "./utils", optional = true}
swc_ecma_visit = {version = "0.38.1", path = "./visit", optional = true}

[dev-dependencies]
