[package]
name = "libswc"
version = "0.1.0"
authors = ["강동윤 <kdy1@outlook.kr>"]
edition = "2018"

[dependencies]
swc_atoms = { path = "../atoms" }
swc_common = { path = "../common" }
swc_ecmascript = { path = "../ecmascript" }
swc_macros = { path = "../macros" }
rayon = "1.0.3"
slog = "2"
sourcemap = "2.2"