[package]
name = "libswc"
version = "0.1.0"
authors = ["강동윤 <kdy1@outlook.kr>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/swc-project/swc.git"
documentation = "https://swc-project.github.io/rustdoc/libswc/"
description = "Speedy web compiler: Make the web (development) faster"

[dependencies]
swc_atoms = { version = "0.1", path ="../atoms" }
swc_common = { version = "0.1", path ="../common" }
swc_ecmascript = { version = "0.1", path ="../ecmascript" }
rayon = "1.0.3"
slog = "2"
sourcemap = "2.2"