[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "mdx processor for rust"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_mdx"
repository = "https://github.com/swc-project/swc.git"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_atoms = {version = "0.2", path = "../atoms"}
swc_common = {version = "0.14.0", path = "../common"}
swc_ecma_ast = {version = "0.56.0", path = "../ecmascript/ast"}
swc_ecma_parser = {version = "0.76.0", path = "../ecmascript/parser"}
