[package]
name = "node-swc"
version = "0.1.0"
authors = ["강동윤 <kdy1@outlook.kr>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"
publish = false

[lib]
name = "ffi"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
swc = { path = "../" }
spack = { path = "../spack" }
anyhow = "1"
serde_json = "1"
neon = "0.4.0"
neon-serde = "0.4.0"
path-clean = "0.1"
serde = { version = "1", features = ["derive"] }