[package]
authors = ["강동윤 <kdy1@outlook.kr>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "node-swc"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "ffi"

[build-dependencies]
napi-build = "0.2.1"

[dependencies]
anyhow = "1"
backtrace = "0.3"
fxhash = "0.2"
napi = "0.4.0"
napi-derive = "0.4.0"
path-clean = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
spack = {path = "../spack"}
swc = {path = "../"}
swc_bundler = {path = "../bundler"}
swc_common = {path = "../common", features = ["tty-emitter", "sourcemap"]}
swc_ecma_ast = {path = "../ecmascript/ast"}
swc_ecma_parser = {path = "../ecmascript/parser"}
