[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "node"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = {version = "1"}

[dependencies]
anyhow = "1"
backtrace = "0.3"
fxhash = "0.2"
napi = {version = "1", features = ["serde-json"]}
napi-derive = {version = "1"}
path-clean = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
spack = {path = "../spack"}
swc = {path = "../"}
swc_atoms = {version = "0.2.4", path = "../atoms"}
swc_bundler = {path = "../bundler"}
swc_common = {path = "../common", features = ["tty-emitter", "sourcemap"]}
swc_ecma_ast = {path = "../ecmascript/ast"}
swc_ecma_parser = {path = "../ecmascript/parser"}

[target.'cfg(all(unix, not(target_env = "musl"), not(target_arch = "aarch64")))'.dependencies]
jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}

[target.'cfg(windows)'.dependencies]
mimalloc = {version = "0.1"}
