[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Base for swc plugins"
documentation = "https://rustdoc.swc.rs/swc_plugin/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_plugin"
repository = "https://github.com/swc-project/swc.git"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
serde = "1.0.126"
serde_json = "1.0.64"
swc_atoms = {path = "../atoms"}
swc_common = {path = "../common"}
swc_ecma_ast = {path = "../ecmascript/ast"}
swc_ecma_visit = {path = "../ecmascript/visit"}
