[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Base for swc plugins"
documentation = "https://rustdoc.swc.rs/swc_plugin/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_plugin"
repository = "https://github.com/swc-project/swc.git"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.9.3"
anyhow = "1.0.41"
serde = "1.0.126"
serde_json = "1.0.64"
swc_atoms = {version = "0.2.7", path = "../atoms"}
swc_common = {version = "0.11.6", path = "../common"}
swc_ecma_ast = {version = "0.50.0", path = "../ecmascript/ast"}
swc_ecma_utils = {version = "0.42.0", path = "../ecmascript/utils"}
swc_ecma_visit = {version = "0.36.0", path = "../ecmascript/visit"}
