[package]
name = "spack"
version = "0.0.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/swc-project/swc.git"
documentation = "https://swc-project.github.io/rustdoc/swc/"
description = "Speedy web compiler"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_atoms = { path = "../atoms" }
swc_common = { path = "../common" }
swc_ecma_ast = { path = "../ecmascript/ast", features = ["fold"] }
swc_ecma_parser = { path = "../ecmascript/parser", features = ["verify"] }
swc_ecma_transforms = { path = "../ecmascript/transforms" }
swc_ecma_utils = { path = "../ecmascript/utils" }
swc = { path = "../" }
string_enum = { version = "0.3", path ="../macros/string_enum" }


serde = { version = "1", features = ["derive"] }
anyhow = "1"
dashmap = "=3.5.1"
rayon = "1"
log = "0.4.8"
node-resolve = "2.2.0"
petgraph = "0.5"
fxhash = "0.2.1"
is-macro = "0.1.8"
neon = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
testing = { path = "../testing" }
walkdir = "2.3.1"
pretty_env_logger = "0.3"
tempfile = "3"