[package]
name = "spack"
version = "0.0.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/swc-project/swc.git"
documentation = "https://swc-project.github.io/rustdoc/swc/"
description = "Speedy web compiler"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_atoms = { path = "../atoms" }
swc_bundler = { path = "../bundler" }
swc_common = { path = "../common" }
swc_ecma_ast = { path = "../ecmascript/ast" }
swc_ecma_codegen = { path = "../ecmascript/codegen" }
swc_ecma_parser = { path = "../ecmascript/parser" }
swc_ecma_transforms = { path = "../ecmascript/transforms" }
swc_ecma_utils = { path = "../ecmascript/utils" }
swc_ecma_visit = { path = "../ecmascript/visit" }
swc = { path = "../" }
string_enum = { version = "0.3", path ="../macros/string_enum" }
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
dashmap = "3"
log = "0.4.8"
node-resolve = "2.2.0"
is-macro = "0.1.8"
neon = { version = "0.4.0", features = ["event-handler-api"] }
neon-sys = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
testing = { path = "../testing" }
walkdir = "2.3.1"
pretty_env_logger = "0.3"
tempfile = "3"