[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
description = "Speedy web compiler"
documentation = "https://rustdoc.swc.rs/swc/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "spack"
publish = false
repository = "https://github.com/swc-project/swc.git"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dashmap = "3"
is-macro = "0.1.8"
log = "0.4.8"
lru = "0.6.1"
once_cell = "1"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
string_enum = {version = "0.3", path = "../macros/string_enum"}
swc = {path = "../"}
swc_atoms = {path = "../atoms"}
swc_bundler = {path = "../bundler"}
swc_common = {path = "../common", features = ["concurrent"]}
swc_ecma_ast = {path = "../ecmascript/ast"}
swc_ecma_codegen = {path = "../ecmascript/codegen"}
swc_ecma_parser = {path = "../ecmascript/parser"}
swc_ecma_transforms = {path = "../ecmascript/transforms"}
swc_ecma_utils = {path = "../ecmascript/utils"}
swc_ecma_visit = {path = "../ecmascript/visit"}

[dev-dependencies]
pretty_assertions = "0.6.1"
pretty_env_logger = "0.3"
tempfile = "3"
testing = {path = "../testing"}
walkdir = "2.3.1"

[target.'cfg(all(unix, not(target_env = "musl")))'.dev-dependencies]
jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}

[target.'cfg(windows)'.dependencies]
normpath="0.2"

[target.'cfg(windows)'.dev-dependencies]
mimalloc = {version = "0.1"}
