[package]
name = "testing"
version = "0.5.2"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/swc-project/swc.git"
documentation = "https://swc-project.github.io/rustdoc/testing/"
description = "Testing utilities for the swc project."
edition = "2018"

[dependencies]
swc_common = { version = "0.5", path ="../common", features = ["fold"] }
once_cell = "1"
regex = "1"
relative-path = "1"
difference = "2"
log = "0.4"
env_logger = "0.7.1"
ansi_term = "0.12.1"
pretty_assertions = "0.6.1"