[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Testing utilities for the swc project."
documentation = "https://rustdoc.swc.rs/testing/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "testing"
repository = "https://github.com/swc-project/swc.git"
version = "0.10.5"

[dependencies]
ansi_term = "0.12.1"
difference = "2"
env_logger = "0.7.1"
log = "0.4"
once_cell = "1"
pretty_assertions = "0.6.1"
regex = "1"
swc_common = {version = "0.10.16", path = "../common", features = ["tty-emitter"]}
testing_macros = {version = "0.1", path = "./macros"}
