[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"
name = "wasm-parser"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_atoms = {path = "../atoms"}
swc_common = {path = "../common"}
swc_ecma_parser = {path = "../ecmascript/parser"}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.8"
