[package]
name = "swc_wasm"
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc = { path = "../" }
wasm-bindgen = "0.2"
serde_json = "1"
once_cell = "1.3.1"
path-clean = "0.1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4.8"
console_error_panic_hook = "0.1.6"