[package]
name = "wasm"
version = "0.2.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/swc-project/swc.git"
description = "wasm module for swc"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc = { path = "../" }
swc_common = { path = "../common" }
swc_ecmascript = { path = "../ecmascript" }
serde_json = "1"
once_cell = "1.3.1"
path-clean = "0.1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4.8"
console_error_panic_hook = "0.1.6"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]