[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "wasm module for swc"
edition = "2018"
license = "Apache-2.0/MIT"
name = "wasm"
repository = "https://github.com/swc-project/swc.git"
version = "1.2.52"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
once_cell = "1.3.1"
path-clean = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
swc = {path = "../"}
swc_common = {path = "../common"}
swc_ecmascript = {path = "../ecmascript"}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.8"
