[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Tasks for the swc project"
edition     = "2021"
license     = "Apache-2.0"
name        = "xtask"
publish     = false
repository  = "https://github.com/swc-project/swc.git"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow         = { workspace = true }
cargo_metadata = "0.18.1"
chrono         = { workspace = true }
clap           = { version = "4.4.6", features = ["derive"] }
semver         = { workspace = true }
serde          = { workspace = true }
serde_derive   = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
walkdir        = { workspace = true }
