[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_core_node"
publish = false
version = "0.2.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]
default = ["swc_v1", "plugin"]
plugin = [
  "swc_core/plugin_backend_wasmer",
  "swc_core/plugin_transform_host_native",
  "swc_core/plugin_transform_host_native_filesystem_cache",
]
swc_v1 = ["swc_core/bundler_node_v1"]
swc_v2 = ["swc_core/bundler_node_v2"]

# Internal flag for testing purpose only.
__plugin_transform_vtest = [
  # We know what we're doing - enable internal features for testing fixture setup.
  "swc_core/__plugin_transform_host",
  "swc_core/__plugin_transform_host_schema_vtest",
  "swc_core/__plugin_transform_env_native",
]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
backtrace          = { workspace = true }
napi               = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive        = { workspace = true, features = ["type-def"] }
par-core           = { workspace = true, features = ["chili"] }
path-clean         = { workspace = true }
rustc-hash         = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true, features = ["unbounded_depth"] }
tracing            = { workspace = true, features = ["release_max_level_info"] }
tracing-chrome     = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

swc_core = { path = "../../crates/swc_core", features = [
  "allocator_node",
  "ecma_ast",
  "ecma_minifier",
  "ecma_codegen",
  "ecma_ast_serde",
  "common_concurrent",
  "bundler",
  "ecma_loader",
  "ecma_helpers_inline",
  "ecma_transforms",
  "ecma_visit",
  "base_node",
  "base_concurrent",
] }
swc_malloc = { path = "../../crates/swc_malloc" }
